# shell-tunnel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: CURRENT-STATUS.md  openapi.json
src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  update.rs
src/api/: handlers.rs  mod.rs  router.rs  types.rs  websocket.rs
src/execution/: command.rs  executor.rs  mod.rs  result.rs
src/output/: mod.rs  sanitizer.rs  screen.rs
src/pty/: async_adapter.rs  mod.rs  native.rs
src/security/: auth.rs  mod.rs  rate_limit.rs  validation.rs
src/session/: context.rs  id.rs  mod.rs  state.rs  store.rs
tests/: api_integration.rs  cli_integration.rs
