[package]
name = "shell-tunnel"
version = "0.1.0"
edition = "2021"
description = "Ultra-lightweight shell tunnel for AI agent integration"
license = "MIT"
repository = "https://github.com/iyulab/shell-tunnel"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "io-util", "sync", "time", "macros"] }

# Cross-platform PTY
portable-pty = "0.9"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# Faster builds for development
incremental = true
