[package]
name = "shell-tunnel"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Ultra-lightweight shell tunnel for AI agent integration"
license = "MIT"
repository = "https://github.com/iyulab/shell-tunnel"
homepage = "https://github.com/iyulab/shell-tunnel"
documentation = "https://docs.rs/shell-tunnel"
readme = "README.md"
keywords = ["shell", "tunnel", "pty", "api", "ai-agent"]
categories = ["command-line-utilities", "development-tools", "api-bindings"]
authors = ["iyulab"]
exclude = [
    ".github/",
    "local-docs/",
    "docs/",
    "tests/",
]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "io-util", "sync", "time", "macros", "signal"] }

# Cross-platform PTY
portable-pty = "0.9"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal emulation (Phase 2)
vte = "0.15"
vt100 = "0.16"

# API Layer (Phase 3)
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI (Phase 5) - minimal footprint (~34KB)
lexopt = "0.3"
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Auto-update (rustls-tls to avoid OpenSSL dependency for cross-compilation)
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# Faster builds for development
incremental = true

[target."cfg(unix)".dependencies]
libc = "0.2.180"
